kamailio con tls OK

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -1,100 +1,5 @@
 #!KAMAILIO
-#
-# Kamailio (OpenSER) SIP Server v5.1 - default configuration script
-#     - web: https://www.kamailio.org
-#     - git: https://github.com/kamailio/kamailio
-#
-# Direct your questions about this file to: <sr-users@lists.kamailio.org>
-#
-# Refer to the Core CookBook at https://www.kamailio.org/wiki/
-# for an explanation of possible statements, functions and parameters.
-#
-# Note: the comments can be:
-#     - lines starting with #, but not the pre-processor directives,
-#       which start with #!, like #!define, #!ifdef, #!endif, #!else, #!trydef,
-#       #!subst, #!substdef, ...
-#     - lines starting with //
-#     - blocks enclosed in between /* */
-#
-# Several features can be enabled using '#!define WITH_FEATURE' directives:
-#
-# *** To run in debug mode:
-#     - define WITH_DEBUG
-#
-# *** To enable mysql:
-#     - define WITH_MYSQL
-#
-# *** To enable authentication execute:
-#     - enable mysql
-#     - define WITH_AUTH
-#     - add users using 'kamctl'
-#
-# *** To enable IP authentication execute:
-#     - enable mysql
-#     - enable authentication
-#     - define WITH_IPAUTH
-#     - add IP addresses with group id '1' to 'address' table
-#
-# *** To enable persistent user location execute:
-#     - enable mysql
-#     - define WITH_USRLOCDB
-#
-# *** To enable presence server execute:
-#     - enable mysql
-#     - define WITH_PRESENCE
-#
-# *** To enable nat traversal execute:
-#     - define WITH_NAT
-#     - install RTPProxy: http://www.rtpproxy.org
-#     - start RTPProxy:
-#        rtpproxy -l _your_public_ip_ -s udp:localhost:7722
-#     - option for NAT SIP OPTIONS keepalives: WITH_NATSIPPING
-#
-# *** To enable PSTN gateway routing execute:
-#     - define WITH_PSTN
-#     - set the value of pstn.gw_ip
-#     - check route[PSTN] for regexp routing condition
-#
-# *** To enable database aliases lookup execute:
-#     - enable mysql
-#     - define WITH_ALIASDB
-#
-# *** To enable speed dial lookup execute:
-#     - enable mysql
-#     - define WITH_SPEEDDIAL
-#
-# *** To enable multi-domain support execute:
-#     - enable mysql
-#     - define WITH_MULTIDOMAIN
-#
-# *** To enable TLS support execute:
-#     - adjust CFGDIR/tls.cfg as needed
-#     - define WITH_TLS
-#
-# *** To enable XMLRPC support execute:
-#     - define WITH_XMLRPC
-#     - adjust route[XMLRPC] for access policy
-#
-# *** To enable anti-flood detection execute:
-#     - adjust pike and htable=>ipban settings as needed (default is
-#       block if more than 16 requests in 2 seconds and ban for 300 seconds)
-#     - define WITH_ANTIFLOOD
-#
-# *** To block 3XX redirect replies execute:
-#     - define WITH_BLOCK3XX
-#
-# *** To block 401 and 407 authentication replies execute:
-#     - define WITH_BLOCK401407
-#
-# *** To enable VoiceMail routing execute:
-#     - define WITH_VOICEMAIL
-#     - set the value of voicemail.srv_ip
-#     - adjust the value of voicemail.srv_port
-#
-# *** To enhance accounting execute:
-#     - enable mysql
-#     - define WITH_ACCDB
-#     - add following columns to database
+
 #!ifdef ACCDB_COMMENT
   ALTER TABLE acc ADD COLUMN src_user VARCHAR(64) NOT NULL DEFAULT '';
   ALTER TABLE acc ADD COLUMN src_domain VARCHAR(128) NOT NULL DEFAULT '';
@@ -173,10 +78,11 @@ children=8
 
 /* uncomment and configure the following line if you want Kamailio to
  * bind on a specific interface/port/proto (default bind on all available) */
-# listen=udp:10.0.0.10:5060
+listen=udp:MY_IP:MY_UDP_PORT
 
 #!ifdef WITH_TLS
 enable_tls=yes
+listen=tls:MY_IP:MY_TLS_PORT
 #!endif
 
 /* life time of TCP connection when there is no traffic
@@ -213,7 +119,7 @@ voicemail.srv_port = "5060" desc "VoiceMail Port"
 ####### Modules Section ########
 
 /* set paths to location of modules */
-# mpath="/usr/local/lib/kamailio/modules/"
+mpath=MPATH
 
 #!ifdef WITH_MYSQL
 loadmodule "db_mysql.so"
